k8s/base/projects/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: projects
spec:
  selector:
    app: projects
  ports:
    - port: 8002
      targetPort: 8002
